refactor(接口测试): 增加清理场景逻辑